# llm-extraction-testing

./: .gitignore  AGENTS.md  README.md  mkdocs.yml  pyproject.toml  test.py
.github/workflows/: docs.yml
docs/: index.md
docs/concepts/: alignment.md  evaluation-driven-development.md  feature-rules.md  logging.md  metrics.md  run-config.md  task-types.md  visualization.md
docs/contributor/: ai-handoff.md  docs-maintenance.md  docs-style-guide.md
docs/getting-started/: installation.md  quickstart.md  task-selection.md
docs/how-to/: configure-feature-rules.md  evaluate-multi-entity.md  evaluate-single-entity.md  evaluate-single-feature.md  generate-visualizations.md  interpret-results.md  save-logs.md
docs/planning/: DOCS_ARCHITECTURE_PLAN.md  DOCS_PROGRESS.md
docs/reference/: config.md  logger.md  models.md  orchestrator.md  overview.md  visualization.md
examples/: streamlit_app.py  test.py  visualize_results.py
src/: aligners.py  config.py  logger.py  metrics.py  models.py  orchestrator.py  tests.py  utils.py
src/extraction_testing/: __init__.py  aligners.py  config.py  logger.py  metrics.py  orchestrator.py  tests.py  utils.py  visualization.py
tests/: test_task_types.py  test_visualization.py
