# pyproject.toml
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "extraction-testing"
version = "0.1.0"
description = "Evaluation framework for single-feature, single-entity, and multi-entity extraction tasks."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["evaluation", "nlp", "information-extraction", "metrics", "testing"]
dependencies = [
  "pandas>=1.5",
  "numpy>=1.23",
  "pydantic>=1.10,<3"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Typing :: Typed"
]

[project.urls]
Homepage = "https://github.com/your-org/llm-extraction-testing"
Repository = "https://github.com/your-org/llm-extraction-testing"

[project.optional-dependencies]
viz = [
  "matplotlib>=3.8",
]
examples = [
  "matplotlib>=3.8",
  "streamlit>=1.35",
]
dev = [
  "black>=24.0",
  "matplotlib>=3.8",
  "mypy>=1.5",
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
  "types-python-dateutil>=2.9.0.20240316",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["extraction_testing*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
